--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -8,6 +8,7 @@ $themes-GreenButton: #25CDDA;
 $themes-border: #DCE0E6; // 边框颜色
 $small: 1439px;
 $large: 1660px;
+$tablehead-BgColor: #F5F6F7;
 
 .page{
   background-color: #fff;
